--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -26,26 +26,30 @@
             <% products.forEach(function(product){ %>
             <div class="w-60">
                 <div
-                    class="w-full h-52 flex items-center justify-center bg-[<%= product.bgcolor %>]"
+                    class="w-full h-52 bg-[<%= product.bgcolor%>] flex items-center justify-center overflow-hidden"
                 >
                     <img
-                        class="h-[12rem]"
+                        class="max-h-full max-w-full object-contain"
                         src="data:image/jpeg;base64,<%= product.image.toString('base64') %>"
                         alt=""
                     />
                 </div>
                 <div
-                    class="flex justify-between bg-[<%= product.panelcolor %>] items-center px-4 py-4 text-[<%= product.textcolor %>]"
+                    class="flex justify-between bg-[<%= product.panelcolor%>] items-center px-5 py-4 text-[<%= product.textcolor%>]"
                 >
                     <div>
-                        <h3><%= product.name %></h3>
-                        <h4>₹ <%= product.price %></h4>
+                        <h3 class="font-semibold text-lg">
+                            <%= product.name %>
+                        </h3>
+                        <h4 class="text=sm font-medium">
+                            ₹ <%= product.price %>
+                        </h4>
                     </div>
                     <a
-                        class="w-7 h-7 flex items-center justify-center rounded-full bg-white"
+                        class="w-8 h-8 flex items-center justify-center rounded-full bg-white"
                         href=""
                     >
-                        <i class="ri-add-line"></i>
+                        <i class="ri-add-line text-lg"></i>
                     </a>
                 </div>
             </div>
